# Posture-AI

./: .design-dna.md  .gitignore  AGENTS.md  App.tsx  PRODUCT.md  README.md  app.json  index.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: verify.yml
PRD/: AI姿态矫正康复产品PRD.md
__tests__/: AGENTS.md  App.test.tsx
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: AGENTS.md  CMakeLists.txt  eyes_llm_session.cpp  eyes_llm_session.h  eyes_log.h  eyes_mnn_bridge.cpp  llm_stream_buffer.hpp  utf8_stream_processor.hpp
docs/: BLE协议与固件.md  Expo原生统一与MNN接入.md  SME2端侧大模型实战演练计划.md  api-engine.md  iOS适配评估与计划.md  初赛参赛文档.md  技术实现文档.md  真机模拟器测试反馈.md  硬件采购与小白使用指南.md  端侧模型对接计划.md  联调进度与实测记录.md  设计-IDEA.md  语义记忆设计.md
expo-preview/: .gitignore  App.tsx  README.md  app.json  metro.config.js  package.json  sensorSource.ts  tsconfig.json
firmware/catune_node/: catune_node.ino
firmware/esp32-smoke-test/: platformio.ini
ios/: AGENTS.md  Podfile
ios/CatuneMnn/: CatuneMnn.h  CatuneMnn.mm  CatuneMnn.podspec  README.md
ios/PostureAI.xcodeproj/: project.pbxproj
prototype/: INTERACTIONS.md  _shared_head.html  agent.html  calibration.html  dashboard-empty.html  dashboard.html  demo.html  desk.html  index.html  mcp-service.html  mock-console.html  pairing.html  plant.html  report.html  settings.html  watchdog.html
scripts/: build-mnn-ios.sh  check-no-color-literal.mjs  check-product-design.mjs  compose-competition-video.py  compose-competition-video.sh  compose-video-label.py  extract-pitch-frames.mjs  gen-frame-manifest.mjs  pack-atlas.mjs
training/: .gitignore  compare.md  compare.py  gen_dataset.py  plot_loss.py
web/: index.html  package-lock.json  package.json
(+189 files in other folders)
